Bug 342951 - No model icon display in documentation window
Summary: No model icon display in documentation window
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.3 (KDE Applications 4.14.3)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 342953
  Show dependency treegraph
 
Reported: 2015-01-17 09:58 UTC by Ralf Habacker
Modified: 2015-01-17 10:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.2 (KDE 14.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-01-17 09:58:19 UTC
In the documentation window for each selected class an icon is displayed, except for the uml model. In this case an empty icon is displayed.

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. make sure documentation window is displayed
3. select the top level item in the tree view

Actual Results:  
an empty icon is displayed

Expected Results:  
from the source the umbrello symbol should be displayed
Comment 1 Ralf Habacker 2015-01-17 10:01:09 UTC
This bug also prevents the display of the top right icon in the code generator, code import and class wizard.
Comment 2 Ralf Habacker 2015-01-17 10:17:29 UTC
Git commit 026ed1e9ca20bec310804787715d96544bf8ee68 by Ralf Habacker.
Committed on 17/01/2015 at 09:58.
Pushed by habacker into branch 'master'.

Fix 'No model icon display in documentation window'.

I found this bug while testing mingw32 cross compiled
umbrello/kf5. Umbrello requires huge time to scan for
a non present icon (about 0.5-2 seconds for a single
icon fetch request) because of the recent implementation
of KIconLoader (version 0.5.6).

M  +1    -1    umbrello/icon_utils.cpp

http://commits.kde.org/umbrello/026ed1e9ca20bec310804787715d96544bf8ee68
Comment 3 Ralf Habacker 2015-01-17 10:20:19 UTC
Git commit f947ed860cd2386123b7c14d69fbebc2faafa5ec by Ralf Habacker.
Committed on 17/01/2015 at 09:58.
Pushed by habacker into branch 'Applications/14.12'.

Fix 'No model icon display in documentation window'.

I found this bug while testing mingw32 cross compiled
umbrello/kf5. Umbrello requires huge time to scan for
a non present icon (about 0.5-2 seconds for a single
icon fetch request) because of the recent implementation
of KIconLoader (version 0.5.6).
(cherry picked from commit 026ed1e9ca20bec310804787715d96544bf8ee68)

M  +1    -1    umbrello/icon_utils.cpp

http://commits.kde.org/umbrello/f947ed860cd2386123b7c14d69fbebc2faafa5ec