Fix 'No model icon display in documentation window'.

I found this bug while testing mingw32 cross compiled
umbrello/kf5. Umbrello requires huge time to scan for
a non present icon (about 0.5-2 seconds for a single
icon fetch request) because of the recent implementation
of KIconLoader (version 0.5.6).

BUG: 342951